--- a/_sass/layout/_banner.scss
+++ b/_sass/layout/_banner.scss
@@ -7,7 +7,7 @@
 /* Banner */
 
 	#banner {
-		@include banner-bg('../../images/banner.jpg');
+		@include banner-bg('../../images/13575949_10154255720829590_8317084945855867197_o.jpg');
 		position: relative;
 		min-height: 70vh;
 		height: 35em;
