--- a/_includes/features.html
+++ b/_includes/features.html
@@ -1,13 +1,23 @@
 <!-- One -->
 <section id="{{ include.section.section_id }}" class="wrapper">
     <div class="inner">
+        <header class="major">
+            <h2>{{ include.section.title }}</h2>
+            {{ include.section.subtitle | markdownify }}
+        </header>
         <ul class="features">
             {% for feature in include.section.features %}
                 <li>
-                    <h3{% assign enabled_is_not_empty = feature.icon.enabled | is_not_empty %}{% if enabled_is_not_empty %} class="icon {{ feature.icon.style }} {{ feature.icon.icon }}"{% endif %}>{{ feature.title }}</h3>
                     {{ feature.description | markdownify }}
                 </li>
             {% endfor %}
+
+            {% assign actions_is_not_empty = include.section.actions | is_not_empty %}
+            {% if actions_is_not_empty %}
+                {% for action in include.section.actions %}
+                    <li class="action"><a href="{% assign expr_1 = action.url | starts_with: '#' %}{% if expr_1 %}{{ action.url }}{% else %}{{ action.url | relative_url }}{% endif %}" class="button{% assign is_primary_is_not_empty = action.is_primary | is_not_empty %}{% if is_primary_is_not_empty %} primary{% endif %}{% assign is_scrolly_is_not_empty = action.is_scrolly | is_not_empty %}{% if is_scrolly_is_not_empty %} scrolly{% endif %}{% assign is_huge_is_not_empty = action.is_huge | is_not_empty %}{% if is_huge_is_not_empty %} huge{% endif %}">{{ action.label }}</a></li>
+                {% endfor %}
+            {% endif %}
         </ul>
     </div>
 </section>
