--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -6,7 +6,7 @@
             {{ include.section.subtitle | markdownify }}
         </header>
         <div class="posts">
-            {% assign arr = '/posts' | get_pages | where_exp: "item", "item.show_in_home_posts == true" | sort: 'date' | reverse %}
+            {% assign arr = '/albums' | get_pages | where_exp: "item", "item.show_in_home_posts == true" | sort: 'date' | reverse %}
             {% for post in arr %}
                 <section class="post">
                     {% assign alt_img_is_not_empty = post.alt_img | is_not_empty %}
