--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -40,7 +40,7 @@ $palette: (
     fg:					#5e6875,
     fg-bold:			#4d5968,
     fg-light:			#7e8895,
-    border:				rgba(144,144,144,0.25),
+    border:				rgba(144,144,144,1),
     border-bg:			rgba(144,144,144,0.075),
     border2:			rgba(144,144,144,0.5),
     border2-bg:			rgba(144,144,144,0.2),
@@ -136,7 +136,7 @@ $palette: (
 	@mixin banner-bg($image, $overlay: false) {
 		$background-image: (
 			'url("images/overlay.png")',
-			'linear-gradient(45deg, #{transparentize(_palette(gradient1), 0.35)}, #{transparentize(_palette(gradient2), 0.35)})',
+			//'linear-gradient(45deg, #{transparentize(_palette(gradient1), 0.35)}, #{transparentize(_palette(gradient2), 0.35)})',
 			'url("#{$image}")'
 		);
 
