--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -10,7 +10,7 @@
             {% if actions_is_not_empty %}
                 <ul class="actions">
                     {% for action in page.banner.actions %}
-                        <li><a href="{% assign expr_1 = action.url | starts_with: '#' %}{% if expr_1 %}{{ action.url }}{% else %}{{ action.url | relative_url }}{% endif %}" class="button{% assign is_primary_is_not_empty = action.is_primary | is_not_empty %}{% if is_primary_is_not_empty %} primary{% endif %}{% assign is_scrolly_is_not_empty = action.is_scrolly | is_not_empty %}{% if is_scrolly_is_not_empty %} scrolly{% endif %}{% assign is_huge_is_not_empty = action.is_huge | is_not_empty %}{% if is_huge_is_not_empty %} huge{% endif %}">{{ action.label }}</a></li>
+                        <li><a href="{% assign expr_1 = action.url | starts_with: '#' %}{% if expr_1 %}{{ action.url }}{% else %}{{ action.url | relative_url }}{% endif %}" class="button{% assign is_primary_is_not_empty = action.is_primary | is_not_empty %}{% if is_primary_is_not_empty %} primary{% endif %}{% assign is_scrolly_is_not_empty = action.is_scrolly | is_not_empty %}{% if is_scrolly_is_not_empty %} scrolly{% endif %}{% assign is_huge_is_not_empty = action.is_huge | is_not_empty %}{% if is_huge_is_not_empty %} huge{% endif %}"{% assign is_external_is_not_empty = action.is_external | is_not_empty %}{% if is_external_is_not_empty %} target="_blank"{% endif %}>{{ action.label }}</a></li>
                     {% endfor %}
                 </ul>
             {% endif %}
