--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,6 +5,21 @@
         <title>{% assign title_is_not_empty = page.title | is_not_empty %}{% if title_is_not_empty %}{{ page.title }} - {% endif %}{{ site.title }}</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+
+        <!-- Page Info -->
+        <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ page.excerpt }}{% endif %}">
+
+        <!-- Twitter Card -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:title" content="{% assign title_is_not_empty = page.title | is_not_empty %}{% if title_is_not_empty %}{{ page.title }} - {% endif %}{{ site.title }}">
+        <meta name="twitter:description" content="{% if page.description %}{{ page.description }}{% else %}{{ page.excerpt }}{% endif %}">
+        <meta name="twitter:image:src" content="{{ site.url }}{{ page.featured_image }}">
+
+        <!-- Facebook OpenGraph -->
+        <meta property="og:title" content="{% assign title_is_not_empty = page.title | is_not_empty %}{% if title_is_not_empty %}{{ page.title }} - {% endif %}{{ site.title }}" />
+        <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ page.excerpt }}{% endif %}" />
+        <meta property="og:image" content="{{ site.url }}{{ page.featured_image }}" />
+
         <link rel="stylesheet" href="{{ 'assets/css/main.css' | relative_url }}" />
         <link rel="stylesheet" href="{{ 'assets/css/markdown-images.css' | relative_url }}" />
         
