--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <!-- Header -->
 <header id="header" {% if page.layout == site.landing_template %}class="alt"{% endif %}>
-    <h1 id="logo"><a href="{{ site.baseurl }}">{{ site.title }}</a></h1>
+    <h1 id="logo"><a href="/">{{ site.title }}</a></h1>
     <!--<nav id="nav">
         {% assign menu = site.menus.main %}
         
