--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -13,12 +13,12 @@
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="{% assign title_is_not_empty = page.title | is_not_empty %}{% if title_is_not_empty %}{{ page.title }} - {% endif %}{{ site.title }}">
         <meta name="twitter:description" content="{% if page.description %}{{ page.description }}{% else %}{{ page.excerpt }}{% endif %}">
-        <meta name="twitter:image:src" content="{{ site.url }}{{ page.featured_image }}">
+        <meta name="twitter:image:src" content="{{ site.url }}/images/13575949_10154255720829590_8317084945855867197_o.jpg">
 
         <!-- Facebook OpenGraph -->
         <meta property="og:title" content="{% assign title_is_not_empty = page.title | is_not_empty %}{% if title_is_not_empty %}{{ page.title }} - {% endif %}{{ site.title }}" />
         <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ page.excerpt }}{% endif %}" />
-        <meta property="og:image" content="{{ site.url }}{{ page.featured_image }}" />
+        <meta property="og:image" content="{{ site.url }}/images/13575949_10154255720829590_8317084945855867197_o.jpg" />
 
         <link rel="stylesheet" href="{{ 'assets/css/main.css' | relative_url }}" />
         <link rel="stylesheet" href="{{ 'assets/css/markdown-images.css' | relative_url }}" />
